--- a/projekt web test/index.html
+++ b/projekt web test/index.html
@@ -28,7 +28,12 @@
         </div>
 
         <div id="banner">
-
+            <img src="./assets/img/banner_image.png" alt="">
+            <div id="banner-content">
+                <div class="gameTitle">Projekt Prologue</div>
+                <p class="subTitle"></p>
+                <a href="" class="buyBtn"></a>
+            </div>
         </div>
 
         <div id="container">
