--- a/projekt web test/index.html
+++ b/projekt web test/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./assets/style.css">
     <link rel="stylesheet" href="./assets/font/themify-icons-font/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=El Messiri">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Philosopher">
     <title>Projekt Web</title>
 </head>
 <body>
