--- a/projekt web test/index.html
+++ b/projekt web test/index.html
@@ -38,7 +38,29 @@
         </div>
 
         <div id="container">
-
+            <div id="news">
+                <h2>News</h2>
+                <div id="news-content">
+                    <div class="topic">
+                        <time>19/06/1983</time>
+                        <img src="./assets/img/rena.png" alt="">
+                        <a href="">DLC Update</a>
+                    </div>
+                    <div class="topic">
+                        class="topic">
+                        <time>19/06/1983</time>
+                        <img src="./assets/img/rena.png" alt="">
+                        <a href="">DLC Update</a>
+                    </div>
+                    <div class="topic">
+                        class="topic">
+                        <time>19/06/1983</time>
+                        <img src="./assets/img/rena.png" alt="">
+                        <a href="">DLC Update</a>
+                    </div>
+                </div>
+                <a href="" class="normalBtn">More News</a>
+            </div>
         </div>
 
         <div id="footer">
