--- a/projekt web test/index.html
+++ b/projekt web test/index.html
@@ -19,8 +19,8 @@
                     <img src="./assets/img/logo_test.png" alt="" id="studioLogo">
                 </a>
             </li>
-            <li><a href="">Introduction</a></li>
             <li><a href="">News</a></li>
+            <li><a href="">Introduction</a></li>
             <li><a href="">Characters</a></li>
             <li><a href="">Gameplay</a></li>
             <li><a href="">Creators</a></li>
@@ -29,9 +29,11 @@
         </div>
 
         <div id="banner">
-            <img src="./assets/img/banner_image.png" alt="">
+            <img src="./assets/img/banner-1.jpg" alt="">
             <div id="banner-content">
-                <div class="gameTitle">Projekt Prologue</div>
+                <div class="gameTitle">
+                    Higurashi When They <span>C</span>ry
+                </div>
                 <p class="subTitle"></p>
                 <a href="" class="buyBtn"></a>
             </div>
@@ -60,6 +62,28 @@
                     </div>
                 </div>
                 <a href="" class="normalBtn">More News</a>
+            </div>
+
+            <div id="introduction">
+                <div class="bg-deco-1"></div>
+                <div id="introduction-content">
+                    <div class="description">
+                        <h2>Introduction</h2>
+                        <p>The 58th year of Shouwa, early summer. <br>
+                            It’s June, and the summer heat has arrived earlier than it does most years.
+                            By day there are crickets, and by night there are cicadas.
+                            
+                            We’re in Hinamizawa, a small village in the countryside.
+                            There are fewer than two thousand people here. <br> But every year, there is an event. <br>
+                            
+                            This event is a mysterious death. <br>
+                            (The series has run from 1979 to 1983)
+                        </p>
+                    </div>
+
+                    <img src="./assets/img/introduction.jpg" alt="">
+                </div>
+                <div class="bg-deco-2"></div>
             </div>
         </div>
 
