--- a/projekt web test/index.html
+++ b/projekt web test/index.html
@@ -21,6 +21,7 @@
             </li>
             <li><a href="">News</a></li>
             <li><a href="">Introduction</a></li>
+            <li><a href="">Story</a></li>
             <li><a href="">Characters</a></li>
             <li><a href="">Gameplay</a></li>
             <li><a href="">Creators</a></li>
@@ -72,10 +73,8 @@
                         <p>The 58th year of Shouwa, early summer. <br>
                             It’s June, and the summer heat has arrived earlier than it does most years.
                             By day there are crickets, and by night there are cicadas.
-                            
                             We’re in Hinamizawa, a small village in the countryside.
                             There are fewer than two thousand people here. <br> But every year, there is an event. <br>
-                            
                             This event is a mysterious death. <br>
                             (The series has run from 1979 to 1983)
                         </p>
@@ -84,6 +83,25 @@
                     <img src="./assets/img/introduction.jpg" alt="">
                 </div>
                 <div class="bg-deco-2"></div>
+            </div>
+
+            <div id="story">
+                <div id="story-content">
+                    <h2>Story</h2>
+                    <p>
+                        On a certain day in June, someone dies, and someone else goes missing.<br>
+                        The series of deaths is connected to the upheaval surrounding the dam construction project.<br>
+                        A murder case that was covered up is being reenacted.<br>
+                        Is it a conspiracy? A coincidence? Or perhaps a curse?<br>
+                        Someone who was supposed to be there isn’t.<br>
+                        Someone who wasn’t supposed to be there is.<br>
+                        Someone who was alive last night is dead now.<br>
+                        And someone who is here right now isn’t alive.<br>
+                        So, there is no way to avert tragedy. There is no choice but to give up.<br>
+                        But don’t give up.<br>
+                        Only you can stand up to this.
+                    </p>
+                </div>
             </div>
         </div>
 
