--- a/projekt web test/index.html
+++ b/projekt web test/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./assets/font/themify-icons-font/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=El Messiri">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Philosopher">
+    <link rel="icon" href="./assets/img/icon.jpg">
     <title>Projekt Web</title>
 </head>
 <body>
