--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -24,6 +24,76 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=El Messiri"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Philosopher"
+    />
+    <style>
+      * {
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        max-height: 96969696px;
+      }
+
+      html {
+        font-family: "El Messiri", sans-serif;
+        line-height: 1;
+      }
+
+      @font-face {
+        font-family: Glaive;
+        src: url(./font/Glaive.ttf);
+      }
+
+      .normalBtn {
+        display: block;
+        text-decoration: none;
+        background: #d8245b;
+        border: 4px solid #d8245b;
+        color: #fff;
+        position: relative;
+      }
+
+      .normalBtn::after {
+        display: block;
+        content: "";
+        width: 100%;
+        height: 100%;
+        border: 1px solid #ffa4a4;
+        position: absolute;
+        left: 0;
+        top: 0;
+      }
+
+      .normalBtn:hover {
+        background: #fffba7;
+        color: #d8245b;
+        transition: 0.4s;
+      }
+
+      .bg-deco-1 {
+        background: linear-gradient(
+          74deg,
+          #fffcbc 15%,
+          #8cd3f0 71%,
+          #8cd3f0 100%
+        );
+      }
+
+      .bg-deco-2 {
+        background: linear-gradient(
+          -106deg,
+          #fffcbc 0%,
+          #fffcbc 29%,
+          #8cd3f0 100%
+        );
+      }
+    </style>
     <title>React App</title>
   </head>
   <body>
