--- a/projekt web test/index.html
+++ b/projekt web test/index.html
@@ -12,6 +12,13 @@
     <title>Projekt Web</title>
 </head>
 <body>
+    <div id="player">
+        <audio autoplay hidden>
+         <source src="./assets/audio/Dawn.mp3" type="audio/mpeg">
+                    If you're reading this, audio isn't supported. 
+        </audio>
+    </div>
+
     <div id="main">
         <div id="header">
            <ul id="nav">
