--- a/projekt web test/index.html
+++ b/projekt web test/index.html
@@ -13,10 +13,10 @@
 </head>
 <body>
     <div id="player">
-        <audio autoplay hidden>
-         <source src="./assets/audio/Dawn.mp3" type="audio/mpeg">
-                    If you're reading this, audio isn't supported. 
-        </audio>
+        <audio controls autoplay loop>
+            <source src="./assets/audio/Dawn.mp3" type="audio/ogg">
+            <embed src="./assets/audio/Dawn.mp3" autostart="true" loop="true" hidden="true"> 
+          </audio>
     </div>
 
     <div id="main">
