--- a/projekt web test/index.html
+++ b/projekt web test/index.html
@@ -14,8 +14,8 @@
 <body>
     <div id="player">
         <audio controls autoplay loop>
-            <source src="./assets/audio/Dawn.mp3" type="audio/ogg">
-            <embed src="./assets/audio/Dawn.mp3" autostart="true" loop="true" hidden="true"> 
+            <source src="./assets/audio/You.mp3" type="audio/ogg">
+            <embed src="./assets/audio/You.mp3" autostart="true" loop="true" hidden="true"> 
           </audio>
     </div>
 
@@ -45,7 +45,7 @@
                         Higurashi When They <span>C</span>ry
                     </div>
                     <p class="subTitle"></p>
-                    <a href="" class="buyBtn"></a>
+                    <a href="https://store.steampowered.com/app/310360/Higurashi_When_They_Cry_Hou__Ch1_Onikakushi/" class="buyBtn"></a>
                 </div>
             </div>
     
@@ -113,6 +113,39 @@
                         </p>
                     </div>
                 </div>
+            </div>
+
+            <div id="character">
+                <div id="character-content">
+                    <h2>Characters</h2>
+
+                    <div class="character-title">
+                        <h3>
+                            Keiichi <br>
+                            Maebara
+                        </h3>
+
+                        <a href="" class="normalBtn">Next</a>
+                    </div>
+
+                    <div class="description">
+                        The protagonist of the story. <br>
+                        Though he is impatient and passionate, he is also indecisive. A character who seems to be stuck as the protagonist of a romance novel who is very shy towards girls. <br>
+
+                        I promise that he is not obedient. <br>
+                        I promise that he will be popular for some reason. <br>
+
+                        However, unfortunately this story is not a romance novel, so his character will surely be a disaster. <br>
+                        ...In many ways. <br>
+                    </div>
+                </div>
+
+                <div class="character-img"></div>
+
+                <div class="character-background"></div>
+
+                <div class="bg-deco-1"></div>
+
             </div>
     
             <div id="footer">
