added home thread preview component

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -93,6 +93,15 @@
           #8cd3f0 100%
         );
       }
+
+      .link {
+        color: inherit;
+        text-decoration: none;
+      }
+
+      .mainContainer {
+        margin-top: 70px;
+      }
     </style>
     <title>React App</title>
   </head>
