--- a/projekt web test/index.html
+++ b/projekt web test/index.html
@@ -206,8 +206,19 @@
                     </div>
                 </div>
             </div>
+
             <div id="footer">
-    
+                <div id="footer-content">
+                    <div class="link">
+                        <a href="http://www.entergram.co.jp/"></a>
+                        <a href="https://07th-expansion.net/"></a>
+                    </div>
+
+                    <div class="copyright">
+                        © Ryukishi07 / 07th Expansion <br>
+                        © ENTERGRAM
+                    </div>
+                </div>
             </div>
         </div>
     </div>
