--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -43,6 +43,15 @@
       html {
         font-family: "El Messiri", sans-serif;
         line-height: 1;
+        color: #0961ba;
+      }
+
+      h2 {
+        -webkit-text-stroke-width: 1px;
+        -webkit-text-stroke-color: #0961ba;
+        color: transparent;
+        font-weight: normal;
+        letter-spacing: 0.02rem;
       }
 
       @font-face {
@@ -77,30 +86,11 @@
       }
 
       .bg-deco-1 {
-        background: linear-gradient(
-          74deg,
-          #fffcbc 15%,
-          #8cd3f0 71%,
-          #8cd3f0 100%
-        );
+        background: linear-gradient(74deg, #fffcbc 15%, #8cd3f0 71%, #8cd3f0 100%);
       }
 
       .bg-deco-2 {
-        background: linear-gradient(
-          -106deg,
-          #fffcbc 0%,
-          #fffcbc 29%,
-          #8cd3f0 100%
-        );
-      }
-
-      .link {
-        color: inherit;
-        text-decoration: none;
-      }
-
-      .mainContainer {
-        margin-top: 70px;
+        background: linear-gradient(-106deg, #fffcbc 0%, #fffcbc 29%, #8cd3f0 100%);
       }
     </style>
     <title>React App</title>
