--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -44,6 +44,7 @@
         font-family: "El Messiri", sans-serif;
         line-height: 1;
         color: #0961ba;
+        background-color: #f4f7f9;
       }
 
       h2 {
@@ -86,11 +87,35 @@
       }
 
       .bg-deco-1 {
-        background: linear-gradient(74deg, #fffcbc 15%, #8cd3f0 71%, #8cd3f0 100%);
+        background: linear-gradient(
+          74deg,
+          #fffcbc 15%,
+          #8cd3f0 71%,
+          #8cd3f0 100%
+        );
       }
 
       .bg-deco-2 {
-        background: linear-gradient(-106deg, #fffcbc 0%, #fffcbc 29%, #8cd3f0 100%);
+        background: linear-gradient(
+          -106deg,
+          #fffcbc 0%,
+          #fffcbc 29%,
+          #8cd3f0 100%
+        );
+      }
+
+      .main {
+        position: relative;
+        width: 100%;
+      }
+
+      .content {
+        position: relative;
+        top: 53px;
+        max-width: 1400px;
+        width: 100%;
+        margin: 0 auto;
+        padding-top: 50px;
       }
     </style>
     <title>React App</title>
