Login and Register

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -32,6 +32,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Philosopher"
     />
+    <title>Higurashi</title>
     <style>
       * {
         padding: 0;
@@ -84,6 +85,10 @@
         background: #fffba7;
         color: #d8245b;
         transition: 0.4s;
+      }
+
+      .normalBtn:hover::after {
+        border: none;
       }
 
       .bg-deco-1 {
