--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -56,6 +56,15 @@
         letter-spacing: 0.02rem;
       }
 
+      a {
+        color: #0961ba;
+        text-decoration: none;
+      }
+
+      a:hover {
+        color: #d8245b;
+      }
+
       @font-face {
         font-family: Glaive;
         src: url(./font/Glaive.ttf);
