Create News Page

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -132,6 +132,18 @@
         margin: 0 auto;
         padding-top: 50px;
       }
+
+      .content .normalBtn {
+        margin-bottom: 100px;
+        width: 200px;
+        height: 58px;
+        margin-top: 50px;
+        float: right;
+        font-size: 25px;
+        font-family: "El Messiri", sans-serif;
+        cursor: pointer;
+        letter-spacing: 0.1rem;
+      }
     </style>
     <title>React App</title>
   </head>
