Function for NavBar

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -144,6 +144,9 @@
         cursor: pointer;
         letter-spacing: 0.1rem;
       }
+      a {
+        cursor: pointer;
+      }
     </style>
     <title>React App</title>
   </head>
